Fix popover when clicking on overflow emojis.
And more display tweaks for emojis and replies on chat posts

--- a/apps/web/src/routes/ChatRoom/ChatPost/ChatPost.module.scss
+++ b/apps/web/src/routes/ChatRoom/ChatPost/ChatPost.module.scss
@@ -162,11 +162,6 @@
   }
 }
 
-.emojis {
-  margin-left: 44px;
-  margin-bottom: 2px;
-}
-
 .noEmojis {
   display: none;
   // position: absolute;
@@ -242,10 +237,6 @@
 @media screen and (max-width: 410px) {
   .postContentContainer {
     margin-left: 35px;
-  }
-
-  .emojis {
-    margin-left: 37px;
   }
 
   .container {
